# factorio-browser

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  Shuttle.toml
.github/workflows/: rust.yml
src/: lib.rs  main.rs  utils.rs
src/api/: factorio.rs  mod.rs  routes.rs
src/components/: app.rs  filters.rs  footer.rs  mod.rs  server_card.rs  server_details.rs  server_list.rs
src/db/: models.rs  queries.rs
static/: input.css  sort.js  style.css
