[package]
name = "factorio-browser"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.24", features = ["json"] }
rocket = { version = "0.5.1", features = ["json"] }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
surrealdb = { version = "2.4.0", features = ["kv-mem", "kv-rocksdb"] }
tokio = { version = "1.48.0", features = ["full"] }
urlencoding = "2.1"
yew = { version = "0.21.0", features = ["ssr"] }
